<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

<!-- App main EN -->
    <string name="app_name">FontEasyRead</string>

    <!-- String for main layout change background clolor -->
    <string name="back_white">White</string>
    <string name="back_black">Black</string>
    <string name="light">"Brightness    :"</string>
    <string name="font_weight">"Font Weight  :"</string>
    <string name="background">"Back Ground :"</string>
    <string name="light_text">( 0 ~ 255 Lux)</string>
    <string name="font_weight_text">( 6 mode )</string>
    <string name="background_text">( 2 mode )</string>
    <string name="light_auto">Brightness Auto :</string>
    <string name="save_info">Save Information :</string>
    <string name="btn_preview">Preview</string>
    <string name="btn_save">Save</string>
    <string name="light_msg">AUTO</string>

<!-- App main EN end -->
<!-- App show EN -->
    <string name="app_name_show">FontEasyRead App Info Demo</string>
    <string name="demo_app_name">App Name</string>
    <string name="layout_btn_add">"+"</string>
    <string name="layout_btn_sub">"-"</string>
    <string name="Layout_txt_msg">New Text</string>

    <!-- Spoken description for IME settings image button [CHAR LIMIT=NONE] -->
    <string name="input_method_settings_button">Settings</string>
    <!-- Manage applications, individual application info screen, text that appears under the "Permissions" heading after the app has tried to send to a premium SMS. [CHAR LIMIT=50] -->
    <string name="security_settings_billing_desc">This app can access the following on your phone:</string>
    <!-- Manage applications, individual application info screen, heading for settings related to the app's permissions. for example, it may list all the permissions the app has. -->
    <string name="permissions_label">Permissions</string>
    <!-- Manage applications, individual application screen, button label under Launch by default heading.  This is used to clear any default actions that may be assigned to this app.  -->
    <string name="clear_activities">Clear defaults</string>
    <!-- Manage applications, individual application info screen,  heading for settings related to controlling whether this app is the default for some actions *and* whether the app was given permission by the user to create widgets -->
    <string name="auto_launch_label_generic">Defaults</string>
    <!-- Manage applications, text label for button -->
    <string name="clear_cache_btn_text">Clear cache</string>
    <!-- Manage applications, label that appears next to the cache size -->
    <string name="cache_size_label">Cache</string>
    <!-- Manage applications, Header name used for cache information -->
    <string name="cache_header_label">Cache</string>
    <!--  Manage applications, individual application info screen, label under Storage heading.  The amount of space taken up by the app's data on USB storage [CHARSIZE=40] -->
    <string name="external_data_size_label" product="nosdcard">USB storage data</string>
    <!--  Manage applications, individual application info screen, label under Storage heading.  The amount of space taken up by the app's data on the SD card [CHARSIZE=40] -->
    <string name="external_data_size_label" product="default">SD card</string>
    <!-- Manage applications, individual application info screen, label under Storage heading.  The amount of sapce taken up by the app's data (for example, downloaded emails or something like that) -->
    <string name="data_size_label">Data</string>
    <!--  Manage applications, individual application info screen, label under Storage heading.  The amount of space taken up by the app's code on USB storage [CHARSIZE=40] -->
    <string name="external_code_size_label">USB storage app</string>
    <!-- Manage applications, individual application info screen, label under Storage heading. The amount of space taken up by the application itself (for example, the java compield files and things like that) -->
    <string name="application_size_label">App</string>
    <!-- Manage applications, individual application info screen,label under Storage heading.  The total storage space taken up by this app. -->
    <string name="total_size_label">Total</string>
    <!-- Manage applications, individual application info screen, section heading for stuff relating to an app's storage settings. -->
    <string name="storage_label">Storage</string>
    <!-- Label for are-notifications-enabled checkbox in app details [CHAR LIMIT=20] -->
    <string name="app_notifications_switch_label">Show notifications</string>
    <!-- Button label for generic cancel action -->
    <string name="cancel">Cancel</string>
    <!-- Manage applications, individual application info screen,  heading for settings related to controlling whether this app is the default for some actions -->
    <string name="auto_launch_label">Launch by default</string>

    <string name="inf_sdcrad">modify or delete the contents of your SD card</string>
    <string name="inf_sdcrad2">read the contents of your SD card</string>
    <string name="default_msg">No default set.</string>
    <string name="demo_app_size">version 1.0.0</string>
    <string name="two_btn_left">Force stop</string>
    <string name="two_btn2_left">Move to SD card</string>
    <string name="two_btn2_right">Clear data</string>


<!-- App show EN end -->

</resources>
