<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/mApp" android:background="#1c1c1c">
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:stretchColumns="1,2">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="3dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:id="@+id/txt_title_default"
                    android:layout_column="0" android:textColor="#ab512d" android:textSize="18sp"
                    />
            <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_show_defaultLight" android:layout_column="1"
                    android:textColor="#669933" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:textSize="16sp" android:text="@string/layout_txt_msg"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_text"
                    android:id="@+id/txt_not_defaultLight" android:layout_column="2" android:textColor="#999999"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="3dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_weight"
                    android:id="@+id/txt_title_fontWidth" android:layout_column="0" android:textColor="#ab512d"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_show_fontWidth" android:layout_column="1"
                    android:textColor="#669933" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:textSize="16sp" android:text="@string/layout_txt_msg"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_weight_text"
                    android:id="@+id/textView4" android:layout_column="2" android:textColor="#999999"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="3dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:id="@+id/txt_title_background" android:layout_column="0" android:textColor="#ab512d"
                    android:textSize="18sp"/>
            <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/back_black"
                    android:id="@+id/txt_show_background" android:layout_column="1"
                    android:textColor="#669933" android:paddingLeft="5dp" android:paddingRight="5dp"
                    android:textSize="16sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_text"
                    android:id="@+id/textView5" android:layout_column="2" android:textColor="#999999"
                    />
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout2" android:layout_centerInParent="true" android:stretchColumns="1,2,3"
            android:shrinkColumns="0">
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="30dp" android:paddingBottom="5dp"
                android:id="@+id/lightControl" android:measureWithLargestChild="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:id="@+id/txt_title_light"
                    android:layout_column="0" android:textColor="#ab512d"
                    android:textSize="18sp"/>
            <SeekBar
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_column="1" android:layout_span="4"
                    />
        </TableRow>
        <!--
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="10dp" android:paddingBottom="10dp"
                android:visibility="gone" android:id="@+id/fontSize">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Font Sizes"
                      android:id="@+id/textView2"
                      android:layout_column="0" android:singleLine="false"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button" android:layout_column="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView3" android:layout_column="2"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button2" android:layout_column="4"/>
        </TableRow>
        -->
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp" android:paddingBottom="5dp"
                android:id="@+id/fontWeight">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/font_weight"
                    android:id="@+id/textView" android:layout_column="0"
                    android:textColor="#ab512d" android:textSize="18sp"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_btn_sub"
                    android:id="@+id/btn_subFontWeight" android:layout_column="1"
                    android:maxWidth="70dp" android:minHeight="60dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" android:gravity="center" android:id="@+id/txt_showFontWeight"
                    android:textColor="#669933" android:textSize="16sp"
                    android:paddingLeft="5dp" android:paddingRight="5dp" android:minWidth="90dp"
                    android:text="@string/layout_txt_msg"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_btn_add"
                    android:id="@+id/btn_addFontWeight" android:layout_column="3"
                    android:maxWidth="70dp" android:minHeight="60dp"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp" android:paddingBottom="5dp"
                android:id="@+id/background">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/background"
                    android:id="@+id/txt_title_btnbackgroad"
                    android:layout_column="0" android:textColor="#ab512d"
                    android:textSize="18sp"/>
            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_background" android:layout_column="3" android:checked="true"
                    android:textOn="@string/back_black"
                    android:textOff="@string/back_white"
                    android:textSize="18sp" android:maxWidth="70dp" android:textColor="@color/black"
                    android:minHeight="60dp"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp" android:paddingBottom="5dp"
                android:id="@+id/lightSync">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/light_auto"
                    android:id="@+id/textView6"
                    android:layout_column="0" android:textColor="#ab512d"
                    android:textSize="18sp"/>
            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton"
                    android:longClickable="false"
                    android:checked="true" android:layout_column="3"
                    android:textSize="18sp" android:maxWidth="70dp" android:textColor="#ff00ff00"
                    android:minHeight="60dp"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:paddingTop="5dp" android:paddingBottom="5dp"
                android:id="@+id/saveInformation">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/save_info"
                    android:id="@+id/textView8" android:layout_column="0"
                    android:textColor="#ab512d" android:textSize="18sp"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save"
                    android:id="@+id/btn_save"
                    android:layout_column="3" android:maxWidth="70dp" android:minHeight="60dp"/>
        </TableRow>
    </TableLayout>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_preview"
            android:id="@+id/btn_show"
            android:layout_below="@+id/tableLayout2" android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" android:textSize="22sp" android:minHeight="60dp"/>
</RelativeLayout>

