<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/mApp">
    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:stretchColumns="1,2">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="3dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:id="@+id/txt_title_default"
                    android:layout_above="@+id/zoomControls" android:layout_toLeftOf="@+id/zoomControls"
                    android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/txt_show_defaultLight" android:layout_column="1" android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_text"
                    android:id="@+id/txt_not_defaultLight" android:layout_column="2"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="3dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_weight"
                    android:id="@+id/txt_title_fontWidth" android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/txt_show_fontWidth" android:layout_column="1" android:paddingRight="5dp"
                    android:paddingLeft="5dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_weight_text"
                    android:id="@+id/textView4" android:layout_column="2"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:padding="3dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:id="@+id/txt_title_background" android:layout_column="0"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_black"
                    android:id="@+id/txt_show_background" android:layout_column="1" android:paddingRight="5dp"
                    android:paddingLeft="5dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_text"
                    android:id="@+id/textView5" android:layout_column="2"/>
        </TableRow>
    </TableLayout>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0" android:layout_alignParentLeft="true"
            android:id="@+id/tableLayout2" android:layout_centerInParent="true" android:stretchColumns="1,2,3">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="30dp" android:paddingBottom="10dp"
                android:id="@+id/lightControl" android:baselineAligned="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"
                    android:id="@+id/txt_title_light" android:layout_above="@+id/seekBar" android:layout_alignParentLeft="true"
                    android:layout_column="0" android:singleLine="false"/>
            <SeekBar
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_above="@+id/linearLayout" android:layout_alignParentLeft="true"
                    android:layout_column="1" android:layout_span="4"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="10dp" android:paddingBottom="10dp"
                android:visibility="gone" android:id="@+id/fontSize">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Font Sizes"
                      android:id="@+id/textView2"
                      android:layout_column="0" android:singleLine="false"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/button" android:layout_column="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView3" android:layout_column="2"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/button2" android:layout_column="4"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="10dp" android:paddingBottom="10dp"
                android:id="@+id/fontWeight" android:baselineAligned="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_weight"
                    android:id="@+id/textView" android:layout_column="0" android:singleLine="false"/>
            <Button
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:id="@+id/btn_subFontWeight" android:layout_column="1"/>
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:layout_column="2" android:gravity="center" android:id="@+id/txt_showFontWeight"
                    />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:id="@+id/btn_addFontWeight" android:layout_column="4"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="10dp" android:paddingBottom="10dp"
                android:id="@+id/background" android:baselineAligned="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background"
                    android:id="@+id/txt_title_btnbackgroad"
                    android:layout_below="@+id/seekBar" android:layout_alignParentRight="true"
                    android:layout_column="0" android:singleLine="false"/>
            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_background" android:layout_column="4" android:checked="true"
                    android:textOn="@string/back_black"
                    android:textOff="@string/back_white"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="10dp" android:paddingBottom="10dp"
                android:id="@+id/lightSync" android:baselineAligned="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_auto"
                    android:id="@+id/textView6" android:layout_above="@+id/txt_title_light"
                    android:layout_column="0" android:singleLine="false"/>
            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New ToggleButton"
                    android:id="@+id/toggleButton"
                    android:layout_alignBottom="@+id/textView6" android:layout_toLeftOf="@+id/textView6"
                    android:longClickable="false"
                    android:checked="true" android:layout_column="4"/>
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:paddingTop="10dp" android:paddingBottom="10dp"
                android:id="@+id/saveInformation" android:baselineAligned="true">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_info"
                    android:id="@+id/textView8" android:layout_column="0" android:singleLine="false"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save"
                    android:id="@+id/btn_save"
                    android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
                    android:layout_column="4" android:textSize="16dp"/>
        </TableRow>
    </TableLayout>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_preview"
            android:id="@+id/btn_show"
            android:layout_below="@+id/tableLayout2" android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
</RelativeLayout>

